playbooks/roles/nat/files/iptables.save
# Generated by iptables-save v1.4.21 on Thu Aug  7 20:16:36 2014
*raw
:PREROUTING ACCEPT [784:55719]
:OUTPUT ACCEPT [690:78678]
COMMIT
# Completed on Thu Aug  7 20:16:36 2014
# Generated by iptables-save v1.4.21 on Thu Aug  7 20:16:36 2014
*filter
:INPUT DROP [10:2400]
:FORWARD DROP [1:76]
:OUTPUT ACCEPT [164:8172]
-A INPUT -p tcp -m tcp --dport 22 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD ! -s VPC_CIDR -d VPC_CIDR -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s VPC_CIDR ! -d VPC_CIDR -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m state --state NEW -j ACCEPT
-A FORWARD -s VPC_CIDR ! -d VPC_CIDR -p tcp -m state --state ESTABLISHED -j ACCEPT
-A FORWARD -m state --state INVALID -j LOG
-A FORWARD -s VPC_CIDR ! -d VPC_CIDR -p icmp -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 22 -j ACCEPT
COMMIT
# Completed on Thu Aug  7 20:16:36 2014
# Generated by iptables-save v1.4.21 on Thu Aug  7 20:16:36 2014
*nat
:PREROUTING ACCEPT [97:8100]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [14:1450]
:POSTROUTING ACCEPT [3:720]
-A POSTROUTING -s VPC_CIDR -o eth1 -j MASQUERADE
COMMIT
# Completed on Thu Aug  7 20:16:36 2014
